# LMS_system

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
config/: .coverage  .env_sample  dump.rdb
config/config/: celery.py  settings.py  urls.py
config/htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_1dbe8758fe0c516b_0001_initial_py.html  z_1dbe8758fe0c516b_0002_course_owner_py.html  z_1dbe8758fe0c516b_0003_course_created_at_course_updated_at_py.html  z_1dbe8758fe0c516b_0004_lesson_created_at_lesson_owner_lesson_updated_at_py.html  z_1dbe8758fe0c516b___init___py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_d7caba16f2a88201_0001_initial_py.html  z_d7caba16f2a88201_0002_payment_py.html  z_d7caba16f2a88201_0003_subscription_py.html  z_d7caba16f2a88201___init___py.html  z_f6c68bdc9becfc1e___init___py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_permissions_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html  z_f978324627c06562___init___py.html  z_f978324627c06562_admin_py.html  z_f978324627c06562_apps_py.html  z_f978324627c06562_models_py.html  z_f978324627c06562_paginators_py.html  z_f978324627c06562_serializers_py.html  z_f978324627c06562_tests_py.html  z_f978324627c06562_urls_py.html  z_f978324627c06562_views_py.html  (+1 more)
(+28 files in other folders)
