[tool.poetry]
name = "lms-system"
version = "0.1.0"
description = ""
authors = ["Alexey Solovyev <solovaa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"
djangorestframework = "^3.16.1"
pillow = "^12.0.0"
django-filter = "^25.2"
djangorestframework-simplejwt = "^5.5.1"
urlextract = "^1.9.0"
drf-spectacular = "^0.29.0"
stripe = "^13.2.0"
python-dotenv = "^1.2.1"
celery = "^5.5.3"
redis = "^7.1.0"
django-celery-beat = "^2.8.1"

[tool.poetry.group.lint.dependencies]
black = "^25.9.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
